Fixed up some warnings.