@@ -1,15 +1,14 @@
 package org.david.planetside.alertnotifier.model;
 
 import android.util.Log;
+import android.util.SparseIntArray;
 
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
 
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 /**
  * The faction control of an arbitrary continent or server.
@@ -30,14 +29,14 @@ public class ContinentControl {
     }
 
     // TODO: Make the key be a Faction object rather than faction id
-    Map<Integer, Integer> controlMap = new HashMap<Integer, Integer>();
+    SparseIntArray controlMap = new SparseIntArray();
 
     int regionCount = continentControlArray.length();
     for (int i = 0; i < regionCount; i++) {
       JSONObject regionControl = continentControlArray.getJSONObject(i);
-      int regionControlFactionId = new Integer(regionControl.getJSONObject("RowData").getString("FactionId"));
+      int regionControlFactionId = Integer.valueOf(regionControl.getJSONObject("RowData").getString("FactionId"));
       Log.i(TAG, "Have a faction control region of: " + regionControlFactionId);
-      if (controlMap.containsKey(regionControlFactionId)) {
+      if (controlMap.indexOfKey(regionControlFactionId) >= 0) {
         int controlCount = controlMap.get(regionControlFactionId) + 1;
         Log.i(TAG, "Updating faction control for region " + regionControlFactionId + " to: " + controlCount);
         controlMap.put(regionControlFactionId, controlCount);
@@ -47,26 +46,26 @@ public class ContinentControl {
       }
     }
 
-    for (Map.Entry<Integer, Integer> entry : controlMap.entrySet()) {
-      int key = entry.getKey();
+    for (int index = 0; index < controlMap.size(); index++) {
+      int key = controlMap.keyAt(index);
       Log.i(TAG, "The number of regions is: " + regionCount);
-      Log.i(TAG, "The value for faction id " + key + " is " + entry.getValue());
-      int value = Math.round((entry.getValue() * 100) / regionCount);
+      Log.i(TAG, "The value for faction id " + key + " is " + controlMap.get(key));
+      int value = Math.round((controlMap.get(key) * 100) / regionCount);
       Log.i(TAG, "Setting control value of " + value + " for faction id " + key);
       controlMap.put(key, value);
     }
 
     // TODO: Make this generic. Confirm the ID values are actually correct.
     List<FactionControl> factionControlList = new ArrayList<FactionControl>();
-    if (controlMap.containsKey(1)) {
+    if (controlMap.indexOfKey(1) >= 0) {
       factionControlList.add(
           new FactionControl(factionList.getFactionWithId(1), controlMap.get(1)));
     }
-    if (controlMap.containsKey(2)) {
+    if (controlMap.indexOfKey(2) >= 0) {
       factionControlList.add(
           new FactionControl(factionList.getFactionWithId(2), controlMap.get(2)));
     }
-    if (controlMap.containsKey(3)) {
+    if (controlMap.indexOfKey(3) >= 0) {
       factionControlList.add(
           new FactionControl(factionList.getFactionWithId(3), controlMap.get(3)));
     }
